# r5edu

./: .gitignore  README.md  apt.txt  environment.yml  setup.cfg
binder/: environment.yml
ci/: environment.yml
source/: conf.py  index.rst
source/course-info/: attribution.rst  installing-miniconda.rst  introduction.rst  literature.rst
source/exercises/: exercise-1.rst
source/lessons/: git-basics.rst  introduction.rst
source/notebooks/: download_elevation_data_python.ipynb  download_poi_data_for_Brighton.ipynb  r5r_intro.ipynb  rpy_intro.ipynb  spatial_network_analysis.ipynb
source/notebooks/demo/: r5py_demo.ipynb  r5r_demo.ipynb
source/notebooks/demo/demo_data/Helsinki/: kantakaupunki.osm.pbf.mapdb
source/notebooks/extra_materials/: index.rst  intro-to-python-geostack.ipynb  spatial_network_analysis.ipynb
source/notebooks/r5r_advanced/: access_to_opportunities.ipynb  accounting_for_monetary_costs.ipynb  index.rst
