[metadata]
name = Open tools for large-scale spatial accessibility analysis in Python and R
version = 2022
license = MIT
description = Workshop: Open tools for large-scale spatial accessibility analysis in Python and R
author = Henrikki Tenkanen
author_email = henrikki.tenkanen@aalto.fi
url = http://r5-ucl.readthedocs.io/
classifiers =
	Development Status :: 2 -
	Environment :: Web Environment
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = r5py
github_repo = r5edu